# equity_fundamental_analysis

./: .gitignore  AGENTS.md  CHANGELOG.md  LICENSE  README.md  codex_mvp_prompt.md  codex_phase_1_prompt.md  codex_phase_2_prompt.md  codex_phase_3_prompt.md  documentation.md  implement.md  project_spec.md  pyproject.toml  requirements.txt
config/watchlists/: README.md  china_consumer_watchlist.csv  sample_sector_watchlist.json  sample_us_watchlist.csv
data/fixtures/: README.md  company_profiles.json  msft_annual_financials.json  msft_market_data.json  msft_peer_multiples.json  msft_shares_outstanding.json  sample_sector_universe.csv  tsla_annual_financials.json  tsla_market_data.json  tsla_peer_multiples.json  tsla_shares_outstanding.json
outputs/: batch_summary.csv  batch_summary.json  batch_summary.md
outputs/china_batch/: batch_summary.csv  batch_summary.json  batch_summary.md
outputs/live_batch/: batch_summary.csv  batch_summary.json  batch_summary.md
outputs/live_watchlist/: batch_summary.csv  batch_summary.json  batch_summary.md
outputs/reports/: msft_analysis_report.md  tsla_analysis_report.md
outputs/scorecards/: msft_red_flags.csv  msft_scorecard.csv  msft_scorecard.json
outputs/watchlist_batch/: batch_summary.csv  batch_summary.json  batch_summary.md
src/: __init__.py
tests/: conftest.py  test_batch_analysis.py  test_live_provider_akshare.py  test_live_provider_yfinance.py  test_metric_modules.py  test_normalize_financials.py  test_orchestration_service.py  test_phase_3_pipeline.py  test_project_scaffold.py  test_provider_runtime.py
(+76 files in other folders)
