[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "equity-fundamental-analysis"
version = "0.1.0"
description = "Provider-agnostic listed-company fundamental analysis engine."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "jinja2>=3.1,<4.0",
    "matplotlib>=3.8,<4.0",
    "numpy>=1.26,<3.0",
    "pandas>=2.2,<3.0",
    "pydantic>=1.10,<3.0",
    "pytest>=8.0,<9.0",
    "akshare>=1.18,<2.0",
    "yfinance>=0.2,<1.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.pytest.ini_options]
addopts = "-ra -p no:cacheprovider"
testpaths = ["tests"]
python_files = ["test_*.py"]
